@@ -1,3 +1,9 @@
+version <unreleased>
+
+Core
+* Fix missing subtitles if --add-metadata is used (#12423)
+
+
 version 2017.03.10
 
 Extractors
